[package]
name = "referral_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }